[gd_scene load_steps=35 format=3 uid="uid://ga4brol6kes6"]

[ext_resource type="Texture2D" uid="uid://dchrq52ekajcy" path="res://weapons/sword/katana.png" id="1_036b0"]
[ext_resource type="Shader" uid="uid://dtq8vkrpvuqfj" path="res://gridmaterial.tres" id="1_78mpy"]
[ext_resource type="Script" uid="uid://cvqsyxc2bhd25" path="res://weapons/weapon_slots.gd" id="1_gbfbk"]
[ext_resource type="Script" uid="uid://ceyvuj3khv7va" path="res://world.gd" id="1_ic0uy"]
[ext_resource type="PackedScene" uid="uid://doh0w0if3r85g" path="res://character.tscn" id="2_7bd7c"]
[ext_resource type="Texture2D" uid="uid://ku6mgjo42sk3" path="res://weapons/gun/pistol.png" id="3_ioo17"]
[ext_resource type="PackedScene" uid="uid://jyo3eu0d12ca" path="res://Character/Zombie.tscn" id="3_tlwt5"]
[ext_resource type="PackedScene" uid="uid://bqadhdhjbkdl4" path="res://Character/ZombieSmall.tscn" id="4_aqk2v"]
[ext_resource type="Texture2D" uid="uid://rafw80j1xwe8" path="res://weapons/medic/medic.png" id="4_wse8f"]
[ext_resource type="PackedScene" uid="uid://qwneja0cc3dx" path="res://Character/MiniBoss.tscn" id="9_ioo17"]
[ext_resource type="PackedScene" uid="uid://bij7s40wd80t5" path="res://Building/Street Light/Street.tscn" id="10_wse8f"]
[ext_resource type="PackedScene" uid="uid://cw3ewsvgwxnr4" path="res://Building/Street Light/StreetLights.tscn" id="12_k3n1d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlwt5"]
bg_color = Color(0.144022, 0.648083, 0.875533, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqk2v"]
bg_color = Color(0.964706, 0.6, 0.6, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_k3n1d"]

[sub_resource type="Sky" id="Sky_2o6r5"]
sky_material = SubResource("ProceduralSkyMaterial_k3n1d")

[sub_resource type="Environment" id="Environment_g3bud"]
background_mode = 2
background_color = Color(0.411765, 0.756863, 0.909804, 1)
sky = SubResource("Sky_2o6r5")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vd2np"]
render_priority = 0
shader = ExtResource("1_78mpy")
shader_parameter/grid_size = 1
shader_parameter/Color_1 = Color(1, 1, 0, 1)
shader_parameter/Color_2 = Color(0.929412, 0.85098, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_13kt2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dmhl4"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rwhea"]
render_priority = 0
shader = ExtResource("1_78mpy")
shader_parameter/grid_size = 1
shader_parameter/Color_1 = Color(1, 1, 1, 1)
shader_parameter/Color_2 = Color(1, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qmir8"]
size = Vector3(3, 2, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fbvl3"]
render_priority = 0
shader = ExtResource("1_78mpy")
shader_parameter/grid_size = 1
shader_parameter/Color_1 = Color(0.964706, 0.658824, 0, 1)
shader_parameter/Color_2 = Color(1, 0.713726, 0.231373, 1)

[sub_resource type="Animation" id="Animation_sy0kk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3.25, 3.75, 9.05)]
}

[sub_resource type="Animation" id="Animation_leev5"]
resource_name = "slide"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.25, 3.75, 9.05), Vector3(2.25, 3.75, 9.05), Vector3(-1.25, 3.75, 9.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vyo8q"]
_data = {
&"RESET": SubResource("Animation_sy0kk"),
&"slide": SubResource("Animation_leev5")
}

[sub_resource type="GDScript" id="GDScript_fj7yv"]
script/source = "extends AnimationPlayer


# Called when the node enters the scene tree for the first time.
func _ready():
	play(\"slide\")


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="BoxShape3D" id="BoxShape3D_qbube"]
size = Vector3(7, 2, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_u3tko"]
size = Vector3(3, 2, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_5me7x"]
size = Vector3(2, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_t0nb6"]
size = Vector3(2.5, 0.5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_rxeai"]
size = Vector3(3, 0.5, 3)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ic0uy"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_k3n1d"]

[node name="World" type="Node3D"]
script = ExtResource("1_ic0uy")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
offset_right = 1928.0
offset_bottom = 980.0

[node name="ColorRect" type="ColorRect" parent="UI/CenterContainer"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
color = Color(0.835718, 3.22476e-06, 7.70092e-07, 1)

[node name="StaminaBar" type="ProgressBar" parent="UI"]
offset_left = 26.0
offset_top = 850.0
offset_right = 256.0
offset_bottom = 880.0
theme_override_styles/background = SubResource("StyleBoxFlat_tlwt5")

[node name="HealthBar" type="ProgressBar" parent="UI"]
offset_left = 26.0
offset_top = 805.0
offset_right = 256.0
offset_bottom = 835.0
theme_override_styles/background = SubResource("StyleBoxFlat_aqk2v")

[node name="WeaponSlots" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -170.0
offset_right = 180.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_gbfbk")

[node name="MarginContainer" type="MarginContainer" parent="UI/WeaponSlots"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.221953, 0.221953)

[node name="HBoxContainer" type="HBoxContainer" parent="UI/WeaponSlots/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ColorRect" type="ColorRect" parent="UI/WeaponSlots/MarginContainer/HBoxContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.270588)

[node name="Slot_Sword" type="TextureRect" parent="UI/WeaponSlots/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("1_036b0")
stretch_mode = 5

[node name="Slot_Gun" type="TextureRect" parent="UI/WeaponSlots/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_ioo17")

[node name="Slot_Medic" type="TextureRect" parent="UI/WeaponSlots/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("4_wse8f")

[node name="character" parent="." instance=ExtResource("2_7bd7c")]
transform = Transform3D(-1, 2.98023e-08, -8.74228e-08, 2.98023e-08, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_g3bud")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.866025, 0.25, -0.433013, 0, 0.866026, 0.5, 0.5, -0.433013, 0.75, 0, 6, 0)
shadow_enabled = true

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(-0.259511, 0.95431, 0.148144, 0.0268235, 0.160462, -0.986678, -0.965367, -0.25208, -0.0672397, -3.5, 1.5, -0.5)
collision_layer = 4
collision_mask = 7
mass = 0.1

[node name="CSGBox3D8" type="CSGBox3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 0.5)
material = SubResource("ShaderMaterial_vd2np")

[node name="CSGBox3D9" type="CSGBox3D" parent="RigidBody3D"]
transform = Transform3D(1, -2.98023e-08, 2.98023e-08, 0, 1, 2.98023e-08, 2.98023e-08, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 0.5)
material = SubResource("StandardMaterial3D_13kt2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_dmhl4")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06329, 0, -36.3025)
use_collision = true
collision_mask = 7
size = Vector3(665, 2, 802.516)
material = SubResource("ShaderMaterial_rwhea")

[node name="AnimationBody3D3" type="AnimatableBody3D" parent="."]
transform = Transform3D(-7.23586e-16, 1, -4.37114e-08, 5.21541e-08, -4.37114e-08, -1, -1, -1.33227e-15, -5.21541e-08, 3.25, 3.75, 9.05)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnimationBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 1.56635e-22, 0, 6.94832e-23, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_qmir8")

[node name="CSGBox3D8" type="CSGBox3D" parent="AnimationBody3D3"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 2, 0.5)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="AnimationBody3D3"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 2, 0.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationBody3D3")
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_vyo8q")
}
script = SubResource("GDScript_fj7yv")

[node name="StaticProps" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4437, -1.90735e-06, 5.53012)

[node name="StaticBody3D" type="StaticBody3D" parent="StaticProps"]
transform = Transform3D(-2.33351e-15, 1, -4.37114e-08, -0.422618, -3.9616e-08, -0.906308, -0.906308, 1.84732e-08, 0.422618, -8, 2.3, -1)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticProps/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("BoxShape3D_qbube")

[node name="CSGBox3D8" type="CSGBox3D" parent="StaticProps/StaticBody3D"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 1.25, 0)
size = Vector3(7, 2, 0.5)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="StaticProps/StaticBody3D"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 1.25, 0)
size = Vector3(7, 2, 0.5)

[node name="StaticBody3D2" type="StaticBody3D" parent="StaticProps"]
transform = Transform3D(-7.23586e-16, 1, -4.37114e-08, 5.21541e-08, -4.37114e-08, -1, -1, -1.33227e-15, -5.21541e-08, -6.75, 3.75, 3.55)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticProps/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 1.56635e-22, 0, 6.94832e-23, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_u3tko")

[node name="CSGBox3D8" type="CSGBox3D" parent="StaticProps/StaticBody3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 2, 0.5)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="StaticProps/StaticBody3D2"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 2, 0.5)

[node name="StaticBody3D4" type="StaticBody3D" parent="StaticProps"]
transform = Transform3D(-7.23586e-16, 1, -4.37114e-08, 5.21541e-08, -4.37114e-08, -1, -1, -1.33227e-15, -5.21541e-08, 0.75, 3.75, 3.55)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticProps/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 1.56635e-22, 0, 6.94832e-23, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_u3tko")

[node name="CSGBox3D8" type="CSGBox3D" parent="StaticProps/StaticBody3D4"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 2, 0.5)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="StaticProps/StaticBody3D4"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 2, 0.5)

[node name="StaticBody3D5" type="StaticBody3D" parent="StaticProps"]
transform = Transform3D(1, -4.37114e-08, 5.21541e-08, 5.21541e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 3.25, 2.5, 2.3)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticProps/StaticBody3D5"]
transform = Transform3D(1, 0, 1.64203e-15, 0, 1, 0, 1.64203e-15, 0, 1, 0, 0, -1.25)
shape = SubResource("BoxShape3D_5me7x")

[node name="CSGBox3D8" type="CSGBox3D" parent="StaticProps/StaticBody3D5"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 1.64203e-15, 3.72529e-09, 1, 0, 0, -1.25)
size = Vector3(2, 0.5, 0.5)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="StaticProps/StaticBody3D5"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 1.64203e-15, 3.72529e-09, 1, 0, 0, -1.25)
size = Vector3(2, 0.5, 0.5)

[node name="StaticBody3D8" type="StaticBody3D" parent="StaticProps"]
transform = Transform3D(1, -4.37114e-08, 5.21541e-08, 5.21541e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 3.25, 2.5, 4.8)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticProps/StaticBody3D8"]
transform = Transform3D(1, 0, 1.64203e-15, 0, 1, 0, 1.64203e-15, 0, 1, 0, 0, -4.76837e-07)
shape = SubResource("BoxShape3D_t0nb6")

[node name="CSGBox3D8" type="CSGBox3D" parent="StaticProps/StaticBody3D8"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 3.72529e-09, 1.64203e-15, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(2, 0.5, 3)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="StaticProps/StaticBody3D8"]
transform = Transform3D(1, -8.47033e-22, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(2, 0.5, 3)

[node name="StaticBody3D6" type="StaticBody3D" parent="StaticProps"]
transform = Transform3D(-8.74228e-08, -1, 4.37114e-08, 5.21541e-08, -4.37114e-08, -1, 1, -8.74228e-08, 5.21541e-08, 4.5, 2.5, 3.55)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticProps/StaticBody3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 1.56635e-22, 0, 6.94833e-23, 1, 0, 0, -4.76837e-07)
shape = SubResource("BoxShape3D_rxeai")

[node name="CSGBox3D8" type="CSGBox3D" parent="StaticProps/StaticBody3D6"]
transform = Transform3D(1, -8.47033e-22, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 0.5, 3)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="StaticProps/StaticBody3D6"]
transform = Transform3D(1, -8.47033e-22, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 0.5, 3)

[node name="StaticBody3D7" type="StaticBody3D" parent="StaticProps"]
transform = Transform3D(-8.74228e-08, -1, 4.37114e-08, 5.21541e-08, -4.37114e-08, -1, 1, -8.74228e-08, 5.21541e-08, 2, 2.5, 3.55)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticProps/StaticBody3D7"]
transform = Transform3D(1, 0, 0, 0, 1, 1.56635e-22, 0, 6.94833e-23, 1, 0, 0, -4.76837e-07)
shape = SubResource("BoxShape3D_rxeai")

[node name="CSGBox3D8" type="CSGBox3D" parent="StaticProps/StaticBody3D7"]
transform = Transform3D(1, -8.47033e-22, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 0.5, 3)
material = SubResource("ShaderMaterial_fbvl3")

[node name="CSGBox3D9" type="CSGBox3D" parent="StaticProps/StaticBody3D7"]
transform = Transform3D(1, -8.47033e-22, 2.98023e-08, 0, 1, 3.72529e-09, 0, 3.72529e-09, 1, 0, 0, 0)
size = Vector3(3, 0.5, 3)

[node name="Label3D4" type="Label3D" parent="."]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 7.74062, 2.3, 8.8)
alpha_cut = 2
text = "Finish"
font_size = 64

[node name="Zombie_w" parent="." instance=ExtResource("3_tlwt5")]
transform = Transform3D(-0.0663013, 0, -0.394467, 0, 0.4, 0, 0.394467, 0, -0.0663013, 18.5286, 1.0336, -8.48825)

[node name="ZombieSmall" parent="." instance=ExtResource("4_aqk2v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.9794, 7.26853, -4.89477)

[node name="MiniBoss" parent="." instance=ExtResource("9_ioo17")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -12.3759, 1.0009, -7.44402)

[node name="street" parent="." instance=ExtResource("10_wse8f")]
transform = Transform3D(4.05896, 0, 0, 0, 1.27124, 0, 0, 0, 91.9734, 0, 1.06014, -6.98126)

[node name="StaticBody3D" type="StaticBody3D" parent="street"]
physics_material_override = SubResource("PhysicsMaterial_ic0uy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="street/StaticBody3D"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_k3n1d")

[node name="StreetLights" parent="." instance=ExtResource("12_k3n1d")]
transform = Transform3D(-0.0369228, 0, 0.999318, 0, 1, 0, -0.999318, 0, -0.0369228, -14.6266, 1.1904, 0)
